@@ -1244,11 +1244,7 @@ Datum LWGEOM_collect_garray(PG_FUNCTION_ARGS)
 	count = 0;
 	outtype = 0;
 
-#if POSTGIS_PGSQL_VERSION >= 95
 	iterator = array_create_iterator(array, 0, NULL);
-#else
-	iterator = array_create_iterator(array, 0);
-#endif
 
 	while (array_iterate(iterator, &value, &isnull))
 	{
@@ -1420,11 +1416,7 @@ Datum LWGEOM_makeline_garray(PG_FUNCTION_ARGS)
 	geoms = palloc(sizeof(LWGEOM *) * nelems);
 	ngeoms = 0;
 
-#if POSTGIS_PGSQL_VERSION >= 95
 	iterator = array_create_iterator(array, 0, NULL);
-#else
-	iterator = array_create_iterator(array, 0);
-#endif
 
 	while (array_iterate(iterator, &value, &isnull))
 	{
